# helion

./: .gitignore  .pyre_configuration  CONTRIBUTING.md  LICENSE  NOTES.txt  README.md  lint.sh  pyproject.toml  requirements.txt  setup.py
.github/: merge_rules.yaml
.github/scripts/: gitutils.py  install_triton.sh  trymerge.py
.github/workflows/: lint.yml  merge.yml  revert.yml  test.yml
examples/: add.py  bmm.py  embedding.py  jagged_bmm.py  low_level_pid_interface.py  matmul.py  softmax.py  template_via_closure.py
examples/refs/: jagged_refs.py
helion/: __init__.py  _compat.py  _testing.py  exc.py
helion/_compiler/: ast_extension.py  ast_read_writes.py  compile_environment.py  device_function.py  device_ir.py  error_reporting.py  generate_ast.py  host_function.py  indexing_strategy.py  inductor_lowering.py  lift_closures.py  output_header.py  program_id.py  reduction_strategy.py  roll_reduction.py  source_location.py  tile_dispatch.py  tile_index_proxy.py  tile_strategy.py  traceback_compat.py  tracing_ops.py  type_printer.py  type_propagation.py  variable_origin.py
helion/_logging/: __init__.py  _internal.py
helion/autotuner/: __init__.py  base_search.py  config_fragment.py  config_generation.py  config_spec.py  differential_evolution.py  finite_search.py  logger.py  random_search.py
helion/language/: __init__.py  _decorators.py  _tracing_ops.py  constexpr.py  creation_ops.py  loops.py  memory_ops.py  view_ops.py
helion/runtime/: __init__.py  config.py  kernel.py  precompile_shim.py  settings.py
test/: test_auotuner.py  test_autotuner.py  test_broadcasting.py  test_closures.py  test_constexpr.py  test_control_flow.py  test_examples.py  test_generate_ast.py  test_logging.py  test_loops.py  test_matmul.py  test_misc.py  test_reductions.py  test_type_propagation.py  test_views.py
test/data/: all_ast_nodes.py  basic_kernels.py  type_prop_inputs.py
